# first-etl

./: .env  README.md  pipeline_00_etl.py  pyproject.toml
